# torchdriveenv

./: .gitignore  .gitmodules  Dockerfile  README.md  api_key_template  docker-compose.yml  pyproject.toml  requirements.txt
examples/: common.py  iai_waypoint_suite_evaluation.ipynb  iai_waypoint_suite_evaluation_for_metric.ipynb  plot.py  rl_evaluation.py  rl_training.py  sweep.yml  train.sh  train_cc.sh  waypoint_suite_env_example.ipynb  waypoint_suite_evaluation.ipynb
examples/data/: training_cases.yml
examples/env_configs/: rl_training.yml  sac_training.yml
examples/env_configs/multi_agent/: a2c_training.yml  ppo_training.yml  sac_training.yml  td3_training.yml  wabc_training.yml  wsac_training.yml
examples/env_configs/single_agent/: a2c_training.yml  ppo_training.yml  sac_training.yml  td3_training.yml
helpers/: carla_map_initialization.ipynb  create_waypoint_seq.py  labeled_data_to_config.py  traffic_light_state_validation.ipynb
torchdriveenv/: __init__.py  common.py  configs.py  diffusion_expert.py  env_utils.py  gym_env.py  helpers.py  iai.py  offline_critic.py  record_data.py  visualization.py
torchdriveenv/data/: parked_car.yml  traffic_lights.yml  validation_cases.yml
torchdriveenv/data/labeled_data/: carla_Town03_scenario_waypoint_graph.json  carla_Town03_scenario_waypoint_graph.pkl
torchdriveenv/resources/background_traffic/: Town01_10_383.pkl  Town01_10_462.pkl  Town01_10_634.pkl  Town01_10_845.pkl  Town01_10_990.pkl  Town01_15_15.pkl  Town01_15_26.pkl  Town01_15_375.pkl  Town01_15_376.pkl  Town01_15_53.json  Town01_15_575.pkl  (+190 more)
(+16 files in other folders)
